--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -22,3 +22,13 @@
     }
 }
 
+.custom-pattern-1 {
+	background-image:
+		  calc( .9*29px) calc( .9*29px)/calc(2*29px) calc(2*29px) conic-gradient(at 20% 20%,#0000 75%,#E4E4ED 0),
+		  calc(-.1*29px) calc(-.1*29px)/calc(2*29px) calc(2*29px) conic-gradient(at 20% 20%,#0000 75%,#E4E4ED 0),
+		  calc( .7*29px) calc( .7*29px)/calc(2*29px) calc(2*29px) conic-gradient(at 40% 40%,#0000 75%,#1A8FE5 0),
+		  calc(-.3*29px) calc(-.3*29px)/calc(2*29px) calc(2*29px) conic-gradient(at 40% 40%,#0000 75%,#1A8FE5 0),
+		  conic-gradient(from 90deg at 20% 20%,#E4E4ED 25%,#1A8FE5 0) ,
+		   0 0/29px 29px
+         ;
+}
